# embench-robonix

./: .gitignore  README.md  pyproject.toml
configs/: robonix_manifest.yaml  tasks_common_sense.yaml  tasks_complex_instruction.yaml  tasks_phase_a.yaml  tasks_spatial_relationship.yaml  tasks_visual_appearance.yaml
docs/: comparable_systems.md  overnight_status_2026-04-25.md
proto/: robonix_runtime.proto
results/_aggregate/: aggregate.md
results/phase_a_20260423_222008/: summary.csv
results/phase_a_20260423_222549/: summary.csv
results/phase_a_20260423_223128/: summary.csv
results/phase_a_20260423_223514/: summary.csv
results/phase_a_20260423_224220/: summary.csv
results/phase_a_20260423_225041/: summary.csv
results/phase_a_20260423_225325/: summary.csv
results/phase_a_20260423_230452/: summary.csv
results/phase_a_20260423_231222/: report.md  summary.csv
results/phase_a_20260423_232032/: summary.csv
results/phase_a_20260423_232532/: summary.csv
results/phase_a_20260424_080801/: summary.csv
results/phase_a_20260424_081146/: summary.csv
results/phase_a_20260424_081801/: summary.csv
results/phase_a_20260424_082424/: summary.csv
results/phase_a_20260424_083023/: summary.csv
results/phase_a_20260424_084133/: summary.csv
results/phase_a_20260424_085800/: summary.csv
results/phase_a_common_sense_20260425_002721/: summary.csv
scripts/: aggregate_report.py  codegen.sh  compare_report.py  overnight_compare.sh  report_phase_a.py  run_phase_a.sh  run_phase_a_multi.sh
services/: .gitignore
services/vlm_service/: robonix_manifest.yaml
(+17 files in other folders)
